# e-lims

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODEOWNERS  Dockerfile  README.md  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  sonar-project.properties  tox.ini
.doctrees/: environment.pickle  index.doctree  readme.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---bug.md  ---enchancement.md
.github/templates/: bug.md
.github/workflows/: build.yml  builds.yml  deploy.yml  docker.yml  e-lims-logger-pull-request.yml  e_lims.yml  e_lims_instruments.yml  e_lims_utils.yml  linters.yml  merge.yml  package.yml  publish_docker.yml  pull_request.yml  push.yml  python_documentations.yml  python_linters.yml  python_merge.yml  python_tests.yml  releases.yml  sonarcloud.yml  tags.yml  tests.yml
docs/: requirements-docs.txt
docs/source/: conf.py  index.rst  readme.rst
docs/src/: index.rst
e-lims/: __init__.py
e_lims/: __init__.py  e_lims.py
elims/: __init__.py  elims.py
libs/e-lims-instruments/: README.md  pyproject.toml  tox.ini
libs/e-lims-instruments/docs/src/: conf.py  index.rst
libs/e-lims-instruments/e_lims_instruments/: __init__.py  e_lims_instruments.py
libs/e-lims-instruments/e_lims_instruments/database/: models.py
libs/e-lims-instruments/tests/: __init__.py  test_e_lims_instruments.py
libs/e-lims-logger/: README.md  pyproject.toml  setup.cfg  tox.ini
libs/e-lims-logger/docs/src/: conf.py  index.rst
libs/e-lims-logger/src/: __init__.py  e_lims_logger.py
libs/e-lims-logger/tests/: test_e_lims_logger.py
libs/e-lims-utils/: README.md  instruments.db  pyproject.toml  tox.ini
libs/e-lims-utils/docs/src/: conf.py  index.rst
libs/e-lims-utils/docs/src/crud/: crud.rst
libs/e-lims-utils/docs/src/files/: files.rst
libs/e-lims-utils/docs/src/logger/: logger.rst
libs/e-lims-utils/e_lims_utils/crud/: __init__.py  crud.py
libs/e-lims-utils/e_lims_utils/files/: files.py
libs/e-lims-utils/e_lims_utils/logger/: __init__.py  logger.py
libs/e-lims-utils/src/: __init__.py  e_lims_utils.py
libs/e-lims-utils/src/crud/: __init__.py  crud.py
libs/e-lims-utils/src/files/: __init__.py  files.py  timestamp.py
libs/e-lims-utils/src/logger/: logger.py
libs/e-lims-utils/tests/: test_e_lims_utils.py
libs/e-lims-utils/tests/crud/: __init__.py  test_crud.py
libs/e-lims-utils/tests/files/: __init__.py  test_files.py  test_timestamp.py
libs/e-lims-utils/tests/logger/: __init__.py  test_logger.py
src/: __init__.py
tests/: __init__.py  test_e_lims.py  test_elims.py
