[tool.poetry]
name = "elims"
version = "0.0.0"
description = "elims Cookiecutter Template."
readme = "README.rst"
authors = ["Fabien Meyer <fabien-meyer@outlook.com>"]
license = "MIT"
include = ["elims/py.typed"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typing-extensions = "^4.7.1"

# [tool.poetry.dev-dependencies]
black = "^23.7.0"
commitizen = "^3.7.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-cookies = "^0.7.0"
ruff = "^0.0.286"
sphinx = "^7.2.3"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"
sphinxcontrib-mermaid = "^0.9.2"
tox = "^4.10.0"


[build-system]
requires = ["poetry_core>=1.6.1"]
build-backend = "poetry.core.masonry.api"