[tool.poetry]
name = "e-lims-logger"
version = "0.0.0"
description = "e-lims-logger."
readme = "README.md"
authors = ["Fabien Meyer <fabien-meyer@outlook.com>"]
license = "MIT"
include = ["e-lims-logger/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typing-extensions = "^4.7.1"

# [tool.poetry.dev-dependencies]
black = "^23.7.0"
commitizen = "^3.7.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-cookies = "^0.7.0"
ruff = "^0.0.286"
sphinx = "^7.2.3"
sphinx-rtd-theme = "^1.1.0"
sphinx-autodoc-typehints = "^1.24.0"
sphinxcontrib-mermaid = "^0.9.2"
bandit = "^1.7.5"
tox = "^4.11.3"

[build-system]
requires = ["poetry_core>=1.6.1"]
build-backend = "poetry.core.masonry.api"